Fix view 'cause after error message submit button lands too low

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,3 +62,9 @@ body {
 .navbar-default .navbar-brand:hover {
   color: #b5b5b5;
 }
+
+// Add distance 'cause after showing error message submit button lands too low
+
+.distance-before-footer {
+  padding-bottom: 70px;
+}
